// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders 1`] = `
.c4 {
  display: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
}

.c2 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  padding-left: 10px;
  padding-right: 10px;
}

@media (min-width:768px) {
  .c4 {
    display: inline;
  }
}

@media (min-width:768px) {
  .c1 {
    left: 0;
    right: 0;
    position: absolute;
  }
}

@media (min-width:768px) {
  .c2 {
    border-top-width: 0px;
  }
}

@media (min-width:768px) {
  .c0 {
    margin-top: 30px;
  }
}

@media (min-width:768px) {
  .c3 {
    padding-left: 0;
    padding-right: 0;
  }
}

<style>
{
  "IS1": {
    "textDecoration": "none",
  },
  "IS2": {
    "textDecoration": "none",
  },
  "S1": {
    "color": "rgba(105,105,105,1.00)",
    "font-family": "GillSansMTStd-Medium",
    "font-size": "15px",
    "margin-right": "0px",
    "padding-top": "4px",
  },
  "S2": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "flex-direction": "column",
    "margin-right": "0px",
    "padding-top": "0px",
  },
  "S3": {
    "color": "inherit",
    "font-family": "inherit",
    "font-size": "inherit",
    "margin-right": "0px",
    "padding-top": "0px",
  },
  "S4": {
    "color": "rgba(0,102,153,1.00)",
    "font-family": "GillSansMTStd-Medium",
    "font-size": "15px",
    "height": "15px",
    "margin-right": "0px",
    "padding-top": "0px",
    "text-align": "left",
  },
  "S5": {
    "-ms-flex-align": "center",
    "-ms-flex-direction": "row",
    "-webkit-align-items": "center",
    "-webkit-box-align": "center",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "align-items": "center",
    "flex-direction": "row",
    "margin-right": "0px",
    "padding-top": "10px",
  },
  "S6": {
    "color": "rgba(0,102,153,1.00)",
    "font-family": "GillSansMTStd-Medium",
    "font-size": "15px",
    "height": "15px",
    "margin-right": "10px",
    "padding-top": "0px",
    "text-align": "right",
  },
}
</style>

<div
  className="c0 S2"
>
  <div
    className="c1 S2"
  >
    <div
      className="S1"
      data-testid="results-message"
    >
      Showing 4 - 6 of 21 results
    </div>
  </div>
  <div
    className="c2 S2"
  >
    <div
      className="c3 S2"
    >
      <a
        className="IS1"
        href="?mock-1"
      >
        <div
          className="S5"
          data-testid="pagination-button-previous"
        >
          <div
            className="S4"
          >
            <span
              className="S3"
            >
              Previous
              <span
                className="c4 S3"
              >
                 page
              </span>
            </span>
          </div>
        </div>
      </a>
    </div>
    <div
      className="c3 S2"
    >
      <a
        className="IS2"
        href="?mock-3"
      >
        <div
          className="S5"
          data-testid="pagination-button-next"
        >
          <div
            className="S6"
          >
            <span
              className="S3"
            >
              Next
              <span
                className="c4 S3"
              >
                 page
              </span>
            </span>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`2. renders with no results 1`] = `
.c1 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  padding-left: 10px;
  padding-right: 10px;
}

@media (min-width:768px) {
  .c2 {
    padding-left: 0;
    padding-right: 0;
  }
}

<style>
{
  "S1": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "flex-direction": "column",
    "margin-right": "0px",
    "padding-top": "0px",
  },
}
</style>

<div
  className="c0 S1"
>
  <div
    className="c1 S1"
  >
    <div
      className="c2 S1"
    />
    <div
      className="c2 S1"
    />
  </div>
</div>
`;
